一通で通ったところで登録
